dom/media/mediasink/AudioSink.cpp
@@ -233,9 +233,7 @@ AudioSink::GetEndTime() const
     NS_WARNING("Int overflow calculating audio end time");
     return TimeUnit::Zero();
   }
-  // As we may be resampling, rounding errors may occur. Ensure we never get
-  // past the original end time.
-  return std::min(mLastEndTime, played);
+  return played;
 }
 
 UniquePtr<AudioStream::Chunk>
